Inicio HTML(lista-compras)

--- a/lista-compras/index.html
+++ b/lista-compras/index.html
@@ -13,7 +13,36 @@
 </head>
 
 <body>
+    <main>
+        <img src="img/bag.png" alt="sacola de compras">
+        <form>
+            <imput type="text" placeholder="digite o item que deseja adicionar"/>
+            <button>Salvar item</button>
+        </form>
 
+        <h2>Lista de compras</h2>
+        <hr>
+
+        <ul>
+            <li>
+                <div> 
+                    <div>
+                        <imput type="checkbox"/>
+                        <p>Ração de gato</p>
+                    </div>
+                    <div>
+                        <button>
+                            <img src="img/delete.svg" alt="botao delete"/>
+                        </button>
+                        <button>
+                            <img src="img/edit.svg" alt="botao editar"/>
+                        </button>
+                    </div>
+                </div>
+                <p>Segunda-feira (31/10/2022) às 08:30</p>
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
